2017-07-02	"So little time, so little to do."  (3)

		GNUmakefile :
		- now passes output of ia16-elf programs to dos2unix

		configure :
		- now looks for dos2unix program build-side

2017-06-21	"So little time, so little to do."  (2)

		infra/travis-install-deps.sh :
		- now handles `arm-*hf,*' target specifiers properly

2017-06-20	"So little time, so little to do."

		.travis.yml :
		- now says e.g. `arm-linux-gnueabi,armv6' rather than
		  `armv6-linux-gnueabi', following lolwutconf/ changes

		GNUmakefile :
		- now handles `ia16-elf,*' in addition to `ia16-elf' target
		  specifier

		KeccakCodePackage/ :
		- bumped to 83f4063446

		lolwutconf/ :
		- bumped to 61b05be5c0

		infra/KeccakCodePackage.tar.xz ,
		infra/lolwutconf.tar.xz :
		- updated

2017-06-12	"Toddlers are the stormtroopers of the Lord of Entropy."  (3)

		include/innocent-pear/kthxbai.h :
		- more messing with IRQs (via port 0x21) on ia16-elf

2017-06-12	Removed unwanted type promotions and wrap-arounds.

		include/innocent-pear/bbq.h :
		- removed unwanted type promotions in `<<'s
		- do_inv_opt_rept(...) now clips value of N for case 4

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/yarly.h ,
		include/innocent-pear/host/rly.h :
		- removed unwanted type promotions in `<<'s and `>>'s

		share/innocent-pear/doge-01.cc :
		- for ia16-elf, now directly scrambles 0xff as an 8-bit value

		test/test-kthxbai-b.cc ,
		test/test-kthxbai-b.good :
		- new; tests for unwanted type promotions affecting results

		GNUmakefile :
		- added test-kthxbai-b test case

2017-06-11	"Toddlers are the stormtroopers of the Lord of Entropy."  (2)

		GNUmakefile :
		- now no longer uses `readelf', for ia16-elf target

		include/innocent-pear/bbq.h :
		- added ops::allow_loop_plenty and ops::under_disabled_irqs

		include/innocent-pear/kthxbai.h :
		- now uses ops::allow_loop_plenty and ops::under_disabled_irqs
		  on ia16-elf

		include/innocent-pear/omg.h :