@@ -1,3 +1,11 @@
+2017-07-03	"It was all so different before everything changed."
+
+		include/innocent-pear/rofl.h :
+		- may now invoke 32-bit syscalls, for Linux/x86-64 target
+
+		GNUmakefile :
+		- now does debug build of test-doge-abs-reloc test case, again
+
 2017-07-02	"So little time, so little to do."  (3)
 
 		GNUmakefile :
